# opsagent

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INITIAL_PROMPT.MD  README.md  RUNNING_LOCALLY.md  WHY_OPSAGENT.md  action.yml  agent.py  banner.py  cli.py  conftest.py  demo.py  opsagent.spec  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CNAME  CONTRIBUTING.md  examples.md  index.html
mcp_tools/: __init__.py  git_server.py  log_analyzer.py  notification_server.py  workspace_server.py
tests/: __init__.py  test_agent_rca.py  test_log_analyzer.py  test_log_analyzer_cd.py  test_notification_server.py  test_workspace_server.py
